# Retail-Demand-Forecast

./: .gitignore  PROJECT_RUN_AND_REGEN_STEPS.txt  README.md  docker-compose.yml  docker_commands.txt  dockerfile  freshretail_net50k.ipynb  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: dissertation_presentation.md  dissertation_presentation.pptx  dissertation_results_final.md  ~$dissertation_presentation.pptx
notebooks/: 01_eda_eval.ipynb  05_daily_baseline_modeling.ipynb  06_model_training_analysis.ipynb  14-darts-n-beats copy.ipynb  14-darts-n-beats.ipynb  README.md  feature_engineering.ipynb  imputation_and_aggregation.ipynb
src/: aggregate_impute.py  evaluate_inventory_impact.py  featurize.py  generate_dissertation_report.py  generate_presentation_pptx.py  ingest_flatten.py  prediction_pipeline.py  requirements.txt  run_final_stage.py  train_baseline_benchmarks.py  train_darts_nbeats.py  train_pipeline.py
src/model_pipelines/: README.md  __init__.py  benchmark_analysis.py  benchmark_analysis_publication.py
src/model_pipelines/baselines/: __init__.py  core.py
src/model_pipelines/catboost/: __init__.py  pipeline.py  predict.py  train.py
src/model_pipelines/extra_trees/: __init__.py  pipeline.py  predict.py  train.py
src/model_pipelines/gbr/: __init__.py  pipeline.py  predict.py  train.py
src/model_pipelines/lgbm/: __init__.py  pipeline.py  predict.py  train.py
src/model_pipelines/nbeats/: __init__.py  core.py  pipeline.py  predict.py  train.py
src/model_pipelines/rf/: __init__.py  pipeline.py  predict.py  (+1 more)
src/models/: baseline_benchmark_detailed.csv  baseline_benchmark_predictions.csv  baseline_benchmark_summary.csv  inventory_impact_detailed.csv  inventory_impact_summary.csv  nbeats_cat_1.pt  nbeats_cat_184.pt  nbeats_cat_60.pt  nbeats_cat_81.pt  nbeats_cat_82.pt
(+78 files in other folders)
